k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-mibanco-service
  labels:
    app: helloworld-mibanco
spec:
  type: ClusterIP
  selector:
    app: helloworld-mibanco
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
